# bip39-ss

./: Cargo.toml  README.md
src/: main.rs
src/utils/: lagrange.rs
